--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: rendu
+          persist-credentials: false
       - name: Build doc
         working-directory: ${{github.workspace}}/rendu
         run: |
@@ -32,7 +33,8 @@ jobs:
         with:
           repository: kosua20/Rendu-documentation
           path: doc
-          persist-credentials: false
+          persist-credentials: true
+          token: ${{ secrets.DOC_TOKEN }}
       
       - name: Upload doc
         working-directory: ${{github.workspace}}/doc
