--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -1,24 +1,21 @@
-
-
 name: Documentation
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
+  # Run on the 2nd of every month, at 10AM UTC
+  schedule:
+    - cron:  '0 10 2 * *'
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Run the workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 
 jobs:
   
   document:
+
     runs-on: ubuntu-latest
     
     steps:
+      
       - name: Clone code repository
         uses: actions/checkout@v2
         with:
