--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,6 +41,16 @@ jobs:
           wget -O premake.tar.gz ${PREMAKE_URL}-linux.tar.gz
           tar -xzf premake.tar.gz
 
+       - name: Vulkan for Ubuntu
+        if: startsWith(matrix.os, 'ubuntu')
+        shell: bash
+        working-directory: ${{github.workspace}}
+        run: |
+          wget -O vulkansdk.tar.gz https://sdk.lunarg.com/sdk/download/1.2.182.0/linux/vulkansdk-linux-x86_64-1.2.182.0.tar.gz
+          mkdir vulkansdk && tar -xf vulkansdk.tar.gz -C vulkansdk --strip-components=1
+          rm -rf vulkansdk/source
+      
+
       - name: Dependencies for macOS
         if: startsWith(matrix.os, 'macos')
         shell: bash
@@ -50,6 +60,17 @@ jobs:
           wget -O premake.tar.gz ${PREMAKE_URL}-macosx.tar.gz
           tar -xzf premake.tar.gz
 
+      - name: Vulkan for macOS
+        if: startsWith(matrix.os, 'macos')
+        shell: bash
+        working-directory: ${{github.workspace}}
+        run: |
+          wget -O vulkansdk.dmg https://sdk.lunarg.com/sdk/download/1.2.182.0/mac/vulkansdk-macos-1.2.182.0.dmg
+          hdiutil attach vulkansdk.dmg
+          /Volumes/vulkansdk-macos-1.2.182.0/InstallVulkan.app/Contents/MacOS/InstallVulkan --root `pwd`/vulkansdk/ --accept-licenses --default-answer --confirm-command install copy_only=1
+          hdiutil detach /Volumes/vulkansdk-macos-1.2.182.0
+          mv vulkansdk/macOS vulkansdk/x86_64
+
       - name: Dependencies for Windows
         if: startsWith(matrix.os, 'windows')
         shell: bash
@@ -58,6 +79,14 @@ jobs:
           choco install wget
           wget -O premake.zip ${PREMAKE_URL}-windows.zip
           7z e premake.zip
+
+      - name: Vulkan for Windows
+        if: startsWith(matrix.os, 'windows')
+        shell: bash
+        working-directory: ${{github.workspace}}
+        run: |
+          wget -O vulkansdk.exe https://sdk.lunarg.com/sdk/download/1.2.182.0/windows/VulkanSDK-1.2.182.0-Installer.exe
+          7z x -aoa ./vulkansdk.exe -ovulkansdk
         
       - name: Generate project
         shell: bash
@@ -70,13 +99,18 @@ jobs:
         if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: make ALL
+        run: |
+          export VULKAN_SDK=`pwd`/vulkansdk/x86_64
+          export PATH=$VULKAN_SDK/bin:$PATH
+          export LD_LIBRARY_PATH=$VULKAN_SDK/lib:$LD_LIBRARY_PATH
+          make ALL
       
       - name: Build using MSVC
         if: startsWith(matrix.os, 'windows')
         working-directory: ${{github.workspace}}/build
         shell: cmd
         run: |
+          $env:VULKAN_SDK="$(pwd)/vulkansdk"
           "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" .\Rendu.sln -t:Meta\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
 
     
