CI: enable Windows.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,10 +20,10 @@ jobs:
         include:
           # - os: ubuntu-latest
           #   premake-opts: gmake2
-          # - os: windows-latest
-          #   premake-opts: vs2019
-          - os: macos-10.15
-            premake-opts: gmake2
+          - os: windows-latest
+            premake-opts: vs2019
+          # - os: macos-10.15
+          #   premake-opts: gmake2
     
     runs-on: ${{ matrix.os }}
     
