--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -25,8 +25,10 @@ jobs:
       - name: Build documentation
         working-directory: ${{github.workspace}}/rendu
         run: |
-          sudo apt-get update -y && sudo apt-get install -yq doxygen
-          doxygen docs/Doxyfile
+          sudo apt-get update -y && sudo apt-get install -yq libclang1-9 libclang-cpp9
+          wget -O doxygen.tar.gz https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz
+          mkdir doxygen && tar -xf doxygen.tar.gz -C doxygen --strip-components=1
+          doxygen/bin/doxygen docs/Doxyfile
           
       - name: Clone documentation repository
         uses: actions/checkout@v2
