--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,7 @@ jobs:
           sudo apt-get update -y && sudo apt-get install -yq xorg-dev libgtk-3-dev
           wget -O premake.tar.gz ${PREMAKE_URL}-linux.tar.gz
           tar -xzf premake.tar.gz
+          echo "VULKAN_SDK=`pwd`/vulkansdk/x86_64" >> $GITHUB_ENV
 
       - name: Dependencies for macOS
         if: startsWith(matrix.os, 'macos')
@@ -52,6 +53,7 @@ jobs:
           brew install wget
           wget -O premake.tar.gz ${PREMAKE_URL}-macosx.tar.gz
           tar -xzf premake.tar.gz
+          echo "VULKAN_SDK=`pwd`/vulkansdk/macOS" >> $GITHUB_ENV
 
       - name: Dependencies for Windows
         if: startsWith(matrix.os, 'windows')
@@ -68,7 +70,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{github.workspace}}/vulkansdk
-          key: ${{ runner.os }}-vulkansdk-${{ env.VULKAN_VERSION }}
+          key: ${{ runner.os }}-vulkansdk-${{ env.VULKAN_VERSION }}-1
 
       - name: Vulkan for Ubuntu
         if: startsWith(matrix.os, 'ubuntu') && (steps.cache.outputs.cache-hit != 'true')
@@ -87,7 +89,6 @@ jobs:
           hdiutil attach vulkansdk.dmg
           /Volumes/vulkansdk-macos-${VULKAN_VERSION}/InstallVulkan.app/Contents/MacOS/InstallVulkan --root `pwd`/vulkansdk/ --accept-licenses --default-answer --confirm-command install copy_only=1
           hdiutil detach /Volumes/vulkansdk-macos-${VULKAN_VERSION}
-          mv vulkansdk/macOS vulkansdk/x86_64
 
       - name: Vulkan for Windows
         if: startsWith(matrix.os, 'windows') && (steps.cache.outputs.cache-hit != 'true')
@@ -102,10 +103,7 @@ jobs:
         working-directory: ${{github.workspace}}
         shell: bash
         run: |
-          export VULKAN_SDK=`pwd`/vulkansdk/x86_64
-          export PATH=$VULKAN_SDK/bin:$PATH
-          export LD_LIBRARY_PATH=$VULKAN_SDK/lib:$LD_LIBRARY_PATH
-          ./premake5 ${{matrix.premake-opts}} --skip_shader_validation
+          ./premake5 ${{matrix.premake-opts}} --skip_shader_validation --env_vulkan_sdk
           cd build
           make ALL
       
@@ -114,7 +112,7 @@ jobs:
         working-directory: ${{github.workspace}}
         shell: cmd
         run: |
-          premake5 ${{matrix.premake-opts}} --skip_shader_validation
+          premake5 ${{matrix.premake-opts}} --skip_shader_validation --env_vulkan_sdk
           cd build
           "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" .\Rendu.sln -t:Meta\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
   
