--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Clone code repository
         uses: actions/checkout@v2
 
+
       - name: Dependencies for Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash
@@ -61,6 +62,7 @@ jobs:
           choco install wget
           wget -O premake.zip ${PREMAKE_URL}-windows.zip
           7z e premake.zip
+
 
       - name: Cache Vulkan
         id: cache
@@ -95,13 +97,20 @@ jobs:
         run: |
           wget -O vulkansdk.exe ${VULKAN_URL}/${VULKAN_VERSION}/windows/VulkanSDK-${VULKAN_VERSION}-Installer.exe
           7z x -aoa ./vulkansdk.exe -ovulkansdk
-          
+      
+
+      - name: Generate projects
+        working-directory: ${{github.workspace}}
+        shell: bash
+        run: |
+          ./premake5 ${{matrix.premake-opts}} --skip_shader_validation --env_vulkan_sdk
+
+
       - name: Build using Make
         if: ${{matrix.premake-opts == 'gmake2' }}
         working-directory: ${{github.workspace}}
         shell: bash
         run: |
-          ./premake5 ${{matrix.premake-opts}} --skip_shader_validation --env_vulkan_sdk
           export VULKAN_SDK=`pwd`/vulkansdk/x86_64
           cd build
           make ALL
@@ -111,7 +120,6 @@ jobs:
         working-directory: ${{github.workspace}}
         shell: cmd
         run: |
-          premake5 ${{matrix.premake-opts}} --skip_shader_validation --env_vulkan_sdk
           set VULKAN_SDK=%cd%\vulkansdk
           cd build
           "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" .\Rendu.sln -t:Meta\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
