--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -142,9 +142,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             premake-opts: gmake2
-          - os: windows-latest
+          - os: windows-2019
             premake-opts: vs2019
           - os: macos-10.15
             premake-opts: gmake2
