--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     
     env:
-      PREMAKE_URL: https://github.com/premake/premake-core/releases/download/v5.0.0-alpha15/premake-5.0.0-alpha15
+      PREMAKE_URL: https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2
       VULKAN_URL: https://sdk.lunarg.com/sdk/download
       VULKAN_VERSION: "1.3.250.1"
 
