--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   # Run on the 2nd of every month, at 10AM UTC
-  schedule:
-    - cron:  '0 10 2 * *'
+  #schedule:
+  #  - cron:  '0 10 2 * *'
 
   # Run the workflow manually from the Actions tab
   workflow_dispatch:
